# pokesword

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  ToolchainNX64.cmake
lib/gflib3/: CMakeLists.txt
lib/gflib3/include/container/: dynamic_array.h
lib/gflib3/include/core/: allocator.h  singleton.h
lib/gflib3/include/core/engine/: count_object.h  memory_object.h  object_handle.h
lib/gflib3/include/core/mt/: sync_object.h
lib/gflib3/include/mem/: manager.h  memory_resource.h
lib/gflib3/src/core/: singleton.cpp
lib/gflib3/src/mem/: memory_resource.cpp
prog/: CMakeLists.txt  types.h
prog/contents/: CMakeLists.txt
prog/contents/bag/include/: CMakeLists.txt  bag_proc.h
prog/contents/bag/source/: CMakeLists.txt
tools/: print_decomp_symbols.py  utils.py
